# CUDA_Gr_5

./: README.md  vadd.cl  vadd.cpp
MatrixMultiplication/Debug/: MatrixMultiplication  makefile
MatrixMultiplication/Debug/src/: moje.d  subdir.mk  template.d  template_cpu.d
MatrixMultiplication/src/: moje.c  moje.h  template.cu
ProjektCUDA/: CMakeLists.txt
ProjektCUDA/Testowy/: CMakeLists.txt  Main.cu
ProjektCUDA/Testowy/include/: Gpu.h  MWorkspace.h  Main.h  Manager.h  Matrix.h  VWorkspace.h  Vector.h  gpuBLAS.h
ProjektCUDA/Testowy/src/: Gpu.cu  MWorkspace.cu  Manager.cu  VWorkspace.cu  gpuBLAS.cu  matrix.cpp  vector.cpp
Reduction/: Main.cpp  functions.cpp  functions.h
ReductionFinal/: Main.cu  functions.h  functons.cpp
